# NovaShell

./: .gitignore  Makefile  NovaShell  README.md  mysh
CLI/: main.c  shell.c
engine/: builtins.c  core.c  engine.c  environment.c  executor.c  io.c  launcher.c  memory.c  parser.c  process.c
gui/: CMakeLists.txt
gui/app/: MainWindow.cpp  MainWindow.h  main.cpp
gui/pty/: PtySession.cpp  PtySession.h
gui/renderer/: ScreenRenderer.cpp  ScreenRenderer.h
gui/screen/: ScreenBuffer.cpp  ScreenBuffer.h  ScreenCell.h  ScreenWidget.cpp  ScreenWidget.h
gui/themes/: Dark.qss  Dracula.qss  GruvboxDark.qss  Light.qss  MaterialDark.qss  Monokai.qss  Nord.qss  SolarizedDark.qss  SolarizedLight.qss
gui/widgets/: NavigationButtons.cpp  NavigationButtons.h  ShellEdit.cpp  ShellEdit.h  ShellView.cpp  ShellView.h  ThemeSelector.cpp  ThemeSelector.h  TitleBar.cpp  TitleBar.h
include/: core.h  engine.h  environment.h  executor.h  io.h  memory.h  parser.h  process.h  shell.h
src/: environment.c  executor.c  launcher.c  parser.c  process.c  shell.c
